--- a/panchun/Order/Tpl/Admin/admin_user_list.html
+++ b/panchun/Order/Tpl/Admin/admin_user_list.html
@@ -50,48 +50,24 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>1.</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                        </tr>
-                        <tr>
-                            <td>1.</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                        </tr>
-                        <tr>
-                            <td>1.</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                        </tr>
-                        <tr>
-                            <td>1.</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                        </tr>
+                        <?php foreach($user_list as $user):?>
+                            <tr>
+                                <td><?php echo $user['user_id'];?></td>
+                                <td><?php echo $user['name'];?></td>
+                                <td><?php echo $user['tel'];?></td>
+                                <td><?php echo $user['address'];?></td>
+                                <td><?php echo $user['created_at'];?></td>
+                                <td><?php echo $user['share_count'];?></td>
+                                <td><?php echo $user['order_count'];?></td>
+                            </tr>
+                        <?php endforeach;?>
 
                     </tbody>
                 </table>
                 <ul>
                     <li>
-                        <a href="#">首页</a>
+                        {$page}
+<!--                        <a href="#">首页</a>
                         <a href="#">上一页</a>
                         <a class="no"  href="#">1</a>
                         <a href="#">2</a>
@@ -99,7 +75,7 @@
                         <a href="#">...</a>
                         <a href="#">4</a>
                         <a href="#">下一页</a>
-                        <a href="#">尾页</a>
+                        <a href="#">尾页</a>-->
                     </li>
                 </ul>
             </div>
