--- a/panchun/Order/Tpl/Admin/index.html
+++ b/panchun/Order/Tpl/Admin/index.html
@@ -22,8 +22,8 @@
                 <div class="headerNav">
                     <a class="logo" href="__APP__">Logo</a>
                     <ul class="nav">
-                        <li><a href="admin_index.html"><?php echo $admin['nickname']?></a></li>
-                        <li><a href="admin_logout.html">退出</a></li>
+                        <li><a href="__URL__/index.html"><?php echo $admin['nickname']?></a></li>
+                        <li><a href="__URL__/logout.html">退出</a></li>
                     </ul>
                 </div>
                 <div id="navMenu">
@@ -33,9 +33,9 @@
         <div class="ho_centent">
             <div class="fl hotai_left">
                 <ul>
-                    <li class="no"><a href="admin_index.html">系统主页</a> </li>
-                    <li><a href="admin_user_list.html">用户列表</a> </li>
-                    <li><a href="admin_order_list.html">订单列表</a> </li>
+                    <li class="no"><a href="__URL__/index.html">系统主页</a> </li>
+                    <li><a href="__URL__/user_list.html">用户列表</a> </li>
+                    <li><a href="__URL__/order_list.html">订单列表</a> </li>
                 </ul>
             </div>
             <div class="right right_1">
