--- a/panchun/Order/Tpl/Admin/login.html
+++ b/panchun/Order/Tpl/Admin/login.html
@@ -18,7 +18,7 @@
                 <div id="o-box-up"></div>
                 <div id="o-box-down"  style="table-layout:fixed;">
                     <div class="error-box"></div>
-                    <form class="registerform"  method="post" action="admin_login.html">
+                    <form class="registerform"  method="post" action="__URL__/login.html">
                         <div class="fm-item">
                             <label for="logonId" class="form-label">登陆帐号：</label>
                             <input type="text" placeholder="输入登陆帐号" maxlength="100" name="account" class="i-text">    
