--- a/panchun/Order/Tpl/Admin/admin_order_list.html
+++ b/panchun/Order/Tpl/Admin/admin_order_list.html
@@ -13,14 +13,14 @@
             #leftside, #container, #splitBar, #splitBarProxy{top:90px}
         </style>
     </head>
-    <body scroll="no" style="background:#ebf5fb; height:100%;">
+    <body style="background:#ebf5fb; height:100%;">
         <div id="layout">
             <div id="header">
                 <div class="headerNav">
                     <a class="logo" href="__APP__">Logo</a>
                     <ul class="nav">
-                        <li><a href="admin_index.html"><?php echo $admin['nickname']?></a></li>
-                        <li><a href="admin_logout.html">退出</a></li>
+                        <li><a href="__URL__/index.html"><?php echo $admin['nickname']?></a></li>
+                        <li><a href="__URL__/logout.html">退出</a></li>
                     </ul>
                 </div>
                 <div id="navMenu">
@@ -30,22 +30,24 @@
         <div class="ho_centent">
             <div class="fl hotai_left">
                 <ul>
-                    <li><a href="admin_index.html">系统主页</a> </li>
-                    <li><a href="admin_user_list.html">用户列表</a> </li>
-                    <li class="no"><a href="admin_order_list.html">订单列表</a> </li>
+                    <li><a href="__URL__/index.html">系统主页</a> </li>
+                    <li><a href="__URL__/user_list.html">用户列表</a> </li>
+                    <li class="no"><a href="__URL__/order_list.html">订单列表</a> </li>
                 </ul>
             </div>
             <div class="right">
-                <a href="#">导出excel</a>
+                <a href="__URL__/order_list_export.html">导出excel</a>
                 <table class="table table-striped table-bordered" width="100%">
                     <thead>
                         <tr>
                             <td>订单编号</td>
                             <td>用户</td>
                             <td>产品</td>
+                            <td>送货地址</td>
+                            <td>收货人</td>
                             <td >联系电话</td>
                             <td>QQ号码</td>
-                            <td class="diz">用户留言</td>
+                            <td>用户留言</td>
                             <td>下单时间</td>
                             <td>订单状态</td>
                             <td>订单操作</td>
@@ -53,107 +55,31 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>1.</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td class="blou">已处理</td>
-                            <td class="zuihou"><button>已处理</button></td>
-                        </tr>
-                        <tr>
-                            <td>1.</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td class="blou">已处理</td>
-                            <td class="zuihou"><button>已处理</button></td>
-                        </tr>
-                        <tr>
-                            <td>1.</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td class="blou">已处理</td>
-                            <td class="zuihou"><button>已处理</button></td>
-                        </tr>
-                        <tr>
-                            <td>1.</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td class="blou">已处理</td>
-                            <td class="zuihou"><button>已处理</button></td>
-                        </tr>
-                        <tr>
-                            <td>1.</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td class="blou ffff">未处理</td>
-                            <td><button>设为已处理</button></td>
-                        </tr>
-                        <tr>
-                            <td>1.</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td class="blou ffff">未处理</td>
-                            <td><button>设为已处理</button></td>
-                        </tr>
-                        <tr>
-                            <td>1.</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td class="blou ffff">未处理</td>
-                            <td><button>设为已处理</button></td>
-                        </tr>
-                        <tr>
-                            <td>1.</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td>2011-12-12</td>
-                            <td>￥1000</td>
-                            <td>@jS</td>
-                            <td class="blou ffff">未处理</td>
-                            <td><button>设为已处理</button></td>
-                        </tr>
+                        <?php foreach($order_list as $order):?>
+                            <tr>
+                                <td class="gy"><?php echo $order['order_id'];?></td>
+                                <td><?php if($order['user_name']){echo $order['user_name'];}else{echo '<span style="color:red;font-size:16px;">游客购买</span>';}?></td>
+                                <td class="ddd"><?php echo $order['remark'];?></td>
+                                <td class="ddd"><?php echo $order['buyer_address'];?></td>
+                                <td><?php echo $order['uname'];?></td>
+                                <td><?php echo $order['tel'];?></td>
+                                <td><?php echo $order['qq'];?></td>
+                                <td class="diz"><?php echo $order['message'];?></td>
+                                <td class="gy"><?php echo $order['created_at'];?></td>
+                                <?php if($order['status'] == 1):?>
+                                <td class="blou ffff gy">未处理</td>
+                                <td class="gy"><button onclick="setting_status(this,'<?php echo $order['order_id'];?>')">设为已处理</button></td>
+                                <?php else:?>
+                                <td class="blou gy">已处理</td>
+                                <td class="zuihou gy"><button>已处理</button></td>
+                                <?php endif;?>
+                            </tr>
+                        <?php endforeach;?>
                     </tbody>
                 </table>
                 <ul>
                     <li>
-                        <a href="#">首页</a>
-                        <a href="#">上一页</a>
-                        <a class="no"  href="#">1</a>
-                        <a href="#">2</a>
-                        <a href="#">3</a>
-                        <a href="#">...</a>
-                        <a href="#">4</a>
-                        <a href="#">下一页</a>
-                        <a href="#">尾页</a>
+                        {$page}
                     </li>
                 </ul>
             </div>
@@ -163,7 +89,35 @@
             $(function () {
                 var hrightobg = $(window).height();
                 $(".hotai_left").height(hrightobg)
-            })
+            });
+            
+            function setting_status(obj,order_id){
+                if(confirm("确定要将订单状态设为已处理吗?")){
+                    $.ajax({
+                        type : 'post',
+                        url : '__URL__/update_order_status.html',
+                        data : {'order_id' : order_id},
+                        dataType : 'json',
+                        success : function(data) 
+                        {
+                            if(data['data']['res'] == 1){
+                                $(obj).html('已处理');
+                                $(obj).parent().prev().html('已处理');
+                                $(obj).parent().prev().removeClass('ffff');
+                                $(obj).parent().addClass('zuihou');
+                            }else{
+                                alert(data['data']['res']);
+                            }
+                        },
+                        error: function ()
+                        {
+                            alert('登录发生错误！');
+                        }
+                    });
+                }else{
+                    
+                }
+            }
         </script>
     </body>
 </html>
