--- a/panchun/Order/Tpl/Admin/admin_user_list.html
+++ b/panchun/Order/Tpl/Admin/admin_user_list.html
@@ -18,8 +18,8 @@
                 <div class="headerNav">
                     <a class="logo" href="__APP__">Logo</a>
                     <ul class="nav">
-                        <li><a href="admin_index.html"><?php echo $admin['nickname']?></a></li>
-                        <li><a href="admin_logout.html">退出</a></li>
+                        <li><a href="__URL__/index.html"><?php echo $admin['nickname']?></a></li>
+                        <li><a href="__URL__/logout.html">退出</a></li>
                     </ul>
                 </div>
                 <div id="navMenu">
@@ -29,20 +29,20 @@
         <div class="ho_centent">
             <div class="fl hotai_left">
                 <ul>
-                    <li><a href="admin_index.html">系统主页</a> </li>
-                    <li class="no"><a href="admin_user_list.html">用户列表</a> </li>
-                    <li><a href="admin_order_list.html">订单列表</a> </li>
+                    <li><a href="__URL__/index.html">系统主页</a> </li>
+                    <li class="no"><a href="__URL__/user_list.html">用户列表</a> </li>
+                    <li><a href="__URL__/order_list.html">订单列表</a> </li>
                 </ul>
             </div>
             <div class="right">
-                <a href="#">导出excel</a>
+                <a href="__URL__/user_list_export.html">导出excel</a>
                 <table class="table table-striped table-bordered" width="100%">
                     <thead>
                         <tr>
-                            <td>用户id</td>
+                            <td>用户ID</td>
                             <td>姓名</td>
                             <td class="dianhu">电话</td>
-                            <td class="diz">地址</td>
+                            <td>地址</td>
                             <td>注册时间</td>
                             <td>成功分享次数</td>
                             <td>购买次数</td>
@@ -55,27 +55,17 @@
                                 <td><?php echo $user['user_id'];?></td>
                                 <td><?php echo $user['name'];?></td>
                                 <td><?php echo $user['tel'];?></td>
-                                <td><?php echo $user['address'];?></td>
+                                <td class="diz"><?php echo $user['address'];?></td>
                                 <td><?php echo $user['created_at'];?></td>
                                 <td><?php echo $user['share_count'];?></td>
                                 <td><?php echo $user['order_count'];?></td>
                             </tr>
                         <?php endforeach;?>
-
                     </tbody>
                 </table>
                 <ul>
                     <li>
                         {$page}
-<!--                        <a href="#">首页</a>
-                        <a href="#">上一页</a>
-                        <a class="no"  href="#">1</a>
-                        <a href="#">2</a>
-                        <a href="#">3</a>
-                        <a href="#">...</a>
-                        <a href="#">4</a>
-                        <a href="#">下一页</a>
-                        <a href="#">尾页</a>-->
                     </li>
                 </ul>
             </div>
