update share page

--- a/panchun/Src/Tpl/User/my_share.html
+++ b/panchun/Src/Tpl/User/my_share.html
@@ -23,10 +23,10 @@
                         }
                     ?>
                     还差<i>{$data['rest_count']}次</i>
-                    即可领取奖品,复制以下链接分享到朋友圈继续加油吧！
+                    即可领取奖品,<i>长按复制</i>以下链接分享到朋友圈！
                     <br>
                     <br>
-                    <span style="margin: auto;display: block; background-color: #2e8116;color: #fff">{$share_data}</span>
+                    <span>{$share_data}</span>
                 </li>
             </ul>
         </div>
