back platform logo url

--- a/panchun/Src/Tpl/Admin/index.html
+++ b/panchun/Src/Tpl/Admin/index.html
@@ -20,7 +20,7 @@
         <div id="layout">
             <div id="header">
                 <div class="headerNav">
-                    <a class="logo" href="__APP__">Logo</a>
+                    <a class="logo" href="__URL__/index.html">Logo</a>
                     <ul class="nav">
                         <li><a href="__URL__/index.html"><?php echo $admin['nickname']?></a></li>
                         <li><a href="__URL__/logout.html">退出</a></li>
